Do the single article page and the Contact page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Brave CMS</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
@@ -13,12 +13,12 @@
   
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="index.html">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav navbar-expand-md me-auto">
+          <ul class="navbar-nav navbar-expand-md">
             <li class="nav-item">
               <a class="nav-link" href="#">Pages</a>
             </li>
@@ -35,7 +35,7 @@
               </ul>
             </li>
           </ul>
-          <form class="search_form w-100 py-1 pe-md-2 mx-auto" role="search">
+          <form class="search_form w-100 pe-md-2 mx-auto" role="search">
             <div class="input-group">
               <input class="form-control search-box" type="search" placeholder="Search articles..." aria-label="Search">
               <div class="input-group-append">
@@ -46,17 +46,296 @@
             </div>
           </form>
 
-          <ul class="navbar-nav button-nav navbar-expand-md mr-auto px-0 px-md-2 pl-md-1 pr-md-2 text-nowrap">
+          <ul class="navbar-nav button-nav navbar-expand-md mr-auto px-0 px-md-2 pl-md-1 text-nowrap">
            <li class="nav-item">
-            <a href="#" class="btn btn-sm btn-success">Login</a>
+            <a href="#" class="btn btn-sm btn-success">
+              <i class="fa-solid fa-right-to-bracket"></i> Login
+            </a>
            </li>
            <li class="nav-item">
-            <a href="#" class="btn btn-sm btn-success">Register</a>
+            <a href="#" class="btn btn-sm btn-success">
+              <i class="fa-solid fa-user-plus"></i> Register
+            </a>
            </li>
           </ul>
         </div>
       </div>
     </nav>
+
+    <div class="container">
+      <div class="row articles-grid">
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="single.html">
+              <img src="assets/images/code.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
+              <h2 class="card-title">
+                <a href="single.html">Learn to code with us, for a better future</a>
+              </h2>
+              <p class="text-muted">Learn to code with us. We have the best teachers in the country.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="single.html">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+                <img src="assets/images/castel.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Europe's most beautiful castles</a>
+              </h2>
+              <p class="text-muted">Sentiments of surrounded friendship connection. Me or produce besides hastily up as pleased.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/code.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Learn to code with us, for a better future</a>
+              </h2>
+              <p class="text-muted">Learn to code with us. We have the best teachers in the country.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/castel.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Europe's most beautiful castles</a>
+              </h2>
+              <p class="text-muted">Sentiments of surrounded friendship connection. Me or produce besides hastily up as pleased.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/code.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Learn to code with us, for a better future</a>
+              </h2>
+              <p class="text-muted">Learn to code with us. We have the best teachers in the country.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/castel.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Europe's most beautiful castles</a>
+              </h2>
+              <p class="text-muted">Sentiments of surrounded friendship connection. Me or produce besides hastily up as pleased.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/code.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Learn to code with us, for a better future</a>
+              </h2>
+              <p class="text-muted">Learn to code with us. We have the best teachers in the country.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/castel.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Europe's most beautiful castles</a>
+              </h2>
+              <p class="text-muted">Sentiments of surrounded friendship connection. Me or produce besides hastily up as pleased.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/code.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Learn to code with us, for a better future</a>
+              </h2>
+              <p class="text-muted">Learn to code with us. We have the best teachers in the country.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/castel.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Europe's most beautiful castles</a>
+              </h2>
+              <p class="text-muted">Sentiments of surrounded friendship connection. Me or produce besides hastily up as pleased.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/code.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Learn to code with us, for a better future</a>
+              </h2>
+              <p class="text-muted">Learn to code with us. We have the best teachers in the country.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
+          <div class="article">
+            <div class="thumbnail">
+              <a href="#">
+              <img src="assets/images/castel.jpg" alt="Learn to code with us, for a better future test">
+              </a>
+            </div>
+            <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
+              <h2 class="card-title">
+                <a href="#">Europe's most beautiful castles</a>
+              </h2>
+              <p class="text-muted">Sentiments of surrounded friendship connection. Me or produce besides hastily up as pleased.</p>
+            </div>
+            <div class="read-more">
+              <a class="btn btn-sm btn-success w-100" href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <nav class="pagination-container">
+        <ul class="pagination d-inline-flex">
+          <li class="page-item">
+            <a class="page-link" href="#" rel="prev" aria-label="« Previous">‹</a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item active" aria-current="page"><span class="page-link">3</span></li>
+          <li class="page-item"><a class="page-link" href="#">4</a></li>
+          <li class="page-item"><a class="page-link" href="#">5</a></li>
+          <li class="page-item disabled" aria-disabled="true"><span class="page-link">...</span></li>
+          <li class="page-item"><a class="page-link" href="#">30</a></li> 
+          <li class="page-item">
+            <a class="page-link" href="#" rel="next" aria-label="Next »">›</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
 
     <div class="site-footer-wrapper">
