Restyle the Contact page

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
               <a class="nav-link" href="#">Pages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -64,22 +64,24 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-md-8 col-lg-6 mx-auto pt-3">
-          <h3>Contact us</h3>
-          <form action="#" id="contactForm" class="contact-form" method="post" accept-charset="utf-8" novalidate="novalidate">
-            <div class="form-group">
-              <input type="text" name="name" id="name" class="form-control" placeholder="Name" data-rule-required="true">
-            </div>
-            <div class="form-group ">
-              <input type="email" name="email" id="email" class="form-control" placeholder="Email" data-rule-required="true">
-            </div>
-            <div class="form-group ">
-              <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Message" data-rule-required="true"></textarea>
-            </div>
-            <div class="form-group">
-              <input type="submit" value="Send" class="btn btn-md btn-success w-100">
-            </div>
-          </form>
+        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 mx-auto">
+          <main class="content rounded mt-4">
+            <h3>Contact us</h3>
+            <form action="#" id="contactForm" class="contact-form" method="post" accept-charset="utf-8" novalidate="novalidate">
+              <div class="form-group">
+                <input type="text" name="name" id="name" class="form-control" placeholder="Name" data-rule-required="true">
+              </div>
+              <div class="form-group ">
+                <input type="email" name="email" id="email" class="form-control" placeholder="Email" data-rule-required="true">
+              </div>
+              <div class="form-group ">
+                <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Message" data-rule-required="true"></textarea>
+              </div>
+              <div class="form-group">
+                <input type="submit" value="Send" class="btn btn-md btn-success w-100">
+              </div>
+            </form>
+          </main>
         </div>
       </div>
     </div>
