Small design adjustments

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav navbar-expand-md">
+          <ul class="navbar-nav pe-md-1 navbar-expand-md">
             <li class="nav-item">
               <a class="nav-link" href="#">Pages</a>
             </li>
@@ -46,7 +46,7 @@
             </div>
           </form>
 
-          <ul class="navbar-nav button-nav navbar-expand-md mr-auto px-0 px-md-2 pl-md-1 text-nowrap">
+          <ul class="navbar-nav button-nav navbar-expand-md mr-auto px-0 pl-md-1 text-nowrap">
            <li class="nav-item">
             <a href="#" class="btn btn-sm btn-success">
               <i class="fa-solid fa-right-to-bracket"></i> Login
@@ -64,7 +64,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 mx-auto">
+        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-7 mx-auto">
           <main class="content rounded mt-4">
             <h3>Contact us</h3>
             <form action="#" id="contactForm" class="contact-form" method="post" accept-charset="utf-8" novalidate="novalidate">
@@ -85,7 +85,6 @@
         </div>
       </div>
     </div>
-
 
     <div class="site-footer-wrapper">
       <div class="footer-copyright">
