--- a/single.html
+++ b/single.html
@@ -18,7 +18,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav navbar-expand-md">
+          <ul class="navbar-nav pe-md-1 navbar-expand-md">
             <li class="nav-item">
               <a class="nav-link" href="#">Pages</a>
             </li>
@@ -46,7 +46,7 @@
             </div>
           </form>
 
-          <ul class="navbar-nav button-nav navbar-expand-md mr-auto px-0 px-md-2 pl-md-1 text-nowrap">
+          <ul class="navbar-nav button-nav navbar-expand-md mr-auto px-0 pl-md-1 text-nowrap">
            <li class="nav-item">
             <a href="#" class="btn btn-sm btn-success">
               <i class="fa-solid fa-right-to-bracket"></i> Login
@@ -79,7 +79,7 @@
                 <span class="date">Nov 19, 2022</span>
               </div>
               <div class="right-half col-sm-12 col-sm-5 col-lg-4">
-                <a class="comments" id="comments_status" href="#" title="2 comments"><i class="fa fa-comments mr-1"></i> 2 comments</a> <strong>·</strong>
+                <a class="comments" id="comments_status" href="#comments_container" title="2 comments"><i class="fa fa-comments mr-1"></i> 2 comments</a> <strong>·</strong>
                 <a href="#" id="print_btn" onclick="printJS({ printable: 'article-content', type: 'html', css: ['./assets/css/style.css', './assets/css/print.css'] })"><i class="fa fa-print"></i> Print</a>
               </div>
             </div>
