--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
             <div class="input-group">
               <input class="form-control search-box" type="search" placeholder="Search articles..." aria-label="Search">
               <div class="input-group-append">
-                <button class="btn" type="submit">
+                <button class="btn rounded-end" type="submit">
                   <i class="fa-solid fa-search"></i>
                 </button>
               </div>
