--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
 
     <div class="site-footer-wrapper">
       <div class="footer-copyright">
-        <p class="text-center">© My Company. All rights reserved</p>
+        <p class="text-center">© Brave CMS, 2023. All rights reserved</p>
       </div>
     </div>
 
