--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
     <div class="site-footer-wrapper">
       <div class="footer-copyright">
-        <p class="text-center">© My Company. All rights reserved</p>
+        <p class="text-center">© Brave CMS, 2023. All rights reserved</p>
       </div>
     </div>
 
