--- a/page.html
+++ b/page.html
@@ -205,7 +205,7 @@
 
     <div class="site-footer-wrapper">
       <div class="footer-copyright">
-        <p class="text-center">© My Company. All rights reserved</p>
+        <p class="text-center">© Brave CMS, 2023. All rights reserved</p>
       </div>
     </div>
 
