--- a/single.html
+++ b/single.html
@@ -93,6 +93,27 @@
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
               <p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
             </div>
+
+            <ul class="d-flex list-unstyled social-buttons">
+              <li class="me-1">
+                <button id="share-button-fb" class="btn btn-sm facebook">
+                  <i class="fab fa-facebook"></i>
+                  Facebook
+                </button>
+              </li>
+              <li class="me-1">
+                <button id="share-button-tw" class="btn btn-sm twitter">
+                  <i class="fab fa-twitter"></i> 
+                  Twitter
+                </button>
+              </li>
+              <li>
+                <button id="share-button-ln" class="btn btn-sm linkedin">
+                  <i class="fab fa-linkedin"></i>
+                  Linkedin
+                </button>
+              </li>
+            </ul>
             
             <div class="comments mt-4" id="comments_container">
               <div class="card bg-light mb-3 comment">
@@ -267,5 +288,6 @@
 
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/print.min.js"></script>
+<script src="assets/js/share.js"></script>
 </body>
 </html>
