--- a/page.html
+++ b/page.html
@@ -66,7 +66,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-7 col-lg-8 col-xl-9">
+        <div class="col-xs-12 col-sm-7 col-lg-8 col-xl-9">
           <main class="content">
             <h2 class="page-title display-4 text-center text-md-start">Terms and conditions</h2>
             <div class="page-content">
@@ -83,7 +83,7 @@
             </div>
           </main>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+        <div class="col-xs-12 col-sm-5 col-lg-4 col-xl-3">
           <aside class="sidebar">
             <div class="tabbed-sidebar">
               <div class="tabbed-heading">
