--- a/single.html
+++ b/single.html
@@ -66,7 +66,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-7 col-lg-8 col-xl-9">
+        <div class="col-xs-12 col-sm-7 col-lg-8 col-xl-9">
           <main class="content" id="article-content">
             <h2 class="article-title display-4 text-center text-md-start">Who loves a butterfly?</h2>
             <div class="row article-meta">
@@ -94,7 +94,7 @@
               <p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
             </div>
 
-            <ul class="d-flex list-unstyled social-buttons">
+            <ul class="d-flex list-unstyled social-buttons justify-content-center justify-content-md-start">
               <li class="me-1">
                 <button id="share-button-fb" class="btn btn-sm facebook">
                   <i class="fab fa-facebook"></i>
@@ -158,7 +158,7 @@
             </div>
           </main>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+        <div class="col-xs-12 col-sm-5 col-lg-4 col-xl-3">
           <aside class="sidebar">
             <div class="tabbed-sidebar">
               <div class="tabbed-heading">
