Hide share buttons on print

--- a/single.html
+++ b/single.html
@@ -94,27 +94,29 @@
               <p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
             </div>
 
-            <ul class="d-flex list-unstyled social-buttons justify-content-center justify-content-md-start">
-              <li class="me-1">
-                <button id="share-button-fb" class="btn btn-sm facebook">
-                  <i class="fab fa-facebook"></i>
-                  Facebook
-                </button>
-              </li>
-              <li class="me-1">
-                <button id="share-button-tw" class="btn btn-sm twitter">
-                  <i class="fab fa-twitter"></i> 
-                  Twitter
-                </button>
-              </li>
-              <li>
-                <button id="share-button-ln" class="btn btn-sm linkedin">
-                  <i class="fab fa-linkedin"></i>
-                  Linkedin
-                </button>
-              </li>
-            </ul>
-            
+            <div class="social-container"> 
+              <ul class="d-flex list-unstyled social-buttons justify-content-center justify-content-md-start">
+                <li class="me-1">
+                  <button id="share-button-fb" class="btn btn-sm facebook">
+                    <i class="fab fa-facebook"></i>
+                    Facebook
+                  </button>
+                </li>
+                <li class="me-1">
+                  <button id="share-button-tw" class="btn btn-sm twitter">
+                    <i class="fab fa-twitter"></i> 
+                    Twitter
+                  </button>
+                </li>
+                <li>
+                  <button id="share-button-ln" class="btn btn-sm linkedin">
+                    <i class="fab fa-linkedin"></i>
+                    Linkedin
+                  </button>
+                </li>
+              </ul>
+            </div>
+
             <div class="comments mt-4" id="comments_container">
               <div class="card bg-light mb-3 comment">
                 <h5 class="card-header p-2">
