Add title attributes on the share buttons

--- a/single.html
+++ b/single.html
@@ -97,19 +97,19 @@
             <div class="social-container"> 
               <ul class="d-flex list-unstyled social-buttons justify-content-center justify-content-md-start">
                 <li class="me-1">
-                  <button id="share-button-fb" class="btn btn-sm facebook">
+                  <button id="share-button-fb" class="btn btn-sm facebook" title="Share this article on Facebook">
                     <i class="fab fa-facebook"></i>
                     Facebook
                   </button>
                 </li>
                 <li class="me-1">
-                  <button id="share-button-tw" class="btn btn-sm twitter">
+                  <button id="share-button-tw" class="btn btn-sm twitter" title="Share this article on Twitter">
                     <i class="fab fa-twitter"></i> 
                     Twitter
                   </button>
                 </li>
                 <li>
-                  <button id="share-button-ln" class="btn btn-sm linkedin">
+                  <button id="share-button-ln" class="btn btn-sm linkedin" title="Share this article on Linkedin">
                     <i class="fab fa-linkedin"></i>
                     Linkedin
                   </button>
