Replace my image and name

--- a/single.html
+++ b/single.html
@@ -73,8 +73,8 @@
               <div class="left-half col-sm-12 col-sm-7 col-lg-8">
                 <span class="author">
                 <a href="#">
-                  <img src="assets/images/razvan.jpg" alt="John Joe" class="rounded-circle ">
-                  <span class="pl-1">by John Joe</span>
+                  <img src="assets/images/john.jpg" alt="John Doe" class="rounded-circle ">
+                  <span class="pl-1">by John Doe</span>
                 </a>
                 </span> 
                 <strong>·</strong>
@@ -121,7 +121,7 @@
               <div class="card bg-light mb-3 comment">
                 <h5 class="card-header p-2">
                   <span class="row">
-                  <span class="col-sm-6 text-dark">John Joe says:</span>
+                  <span class="col-sm-6 text-dark">John Doe says:</span>
                   <span class="col-sm-6 text-dark d-none d-sm-block text-end">Nov 28, 2022 at 23:32:15</span>
                   </span>
                 </h5>
@@ -132,7 +132,7 @@
               <div class="card bg-light mb-3 comment">
                 <h5 class="card-header p-2">
                   <span class="row">
-                  <span class="col-sm-6 text-dark">Jane Joe says:</span>
+                  <span class="col-sm-6 text-dark">Jane Doe says:</span>
                   <span class="col-sm-6 text-dark d-none d-sm-block text-end">Nov 29, 2022 at 00:55:37</span>
                   </span>
                 </h5>
@@ -220,11 +220,11 @@
                     <li class="d-table-row">
                       <div class="thumbnail d-table-cell text-center">
                         <a href="#">
-                        <img src="assets/images/razvan.jpg" alt="John Joe" class="img-thumbnail rounded-circle">
+                        <img src="assets/images/john.jpg" alt="John Doe" class="img-thumbnail rounded-circle">
                         </a>
                       </div>
                       <div class="text d-table-cell">
-                        <h3><a href="#">John Joe</a></h3>
+                        <h3><a href="#">John Doe</a></h3>
                         <p>There are many variations of passages of Lorem Ipsum available, but the…</p>
                       </div>
                     </li>
