--- a/page.html
+++ b/page.html
@@ -143,7 +143,7 @@
                     <li class="d-table-row">
                       <div class="thumbnail d-table-cell text-center">
                         <a href="#">
-                        <img src="assets/images/razvan.jpg" alt="Razvan Zamfir" class="img-thumbnail rounded-circle">
+                        <img src="assets/images/john.jpg" alt="Razvan Zamfir" class="img-thumbnail rounded-circle">
                         </a>
                       </div>
                       <div class="text d-table-cell">
