--- a/single.html
+++ b/single.html
@@ -132,7 +132,7 @@
               <div class="card bg-light mb-3 comment">
                 <h5 class="card-header p-2">
                   <span class="row">
-                  <span class="col-sm-6 text-dark">Jane Doe says:</span>
+                  <span class="col-sm-6 text-dark">Jane Smith says:</span>
                   <span class="col-sm-6 text-dark d-none d-sm-block text-end">Nov 29, 2022 at 00:55:37</span>
                   </span>
                 </h5>
