--- a/contact.html
+++ b/contact.html
@@ -72,13 +72,13 @@
             <h3>Contact us</h3>
             <form action="#" id="contactForm" class="contact-form" method="post" accept-charset="utf-8" novalidate="novalidate">
               <div class="form-group">
-                <input type="text" name="name" id="name" class="form-control" placeholder="Name" data-rule-required="true">
+                <input type="text" name="name" id="name" class="form-control" placeholder="Name">
+              </div>
+              <div class="form-group">
+                <input type="email" name="email" id="email" class="form-control" placeholder="Email">
               </div>
               <div class="form-group ">
-                <input type="email" name="email" id="email" class="form-control" placeholder="Email" data-rule-required="true">
-              </div>
-              <div class="form-group ">
-                <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Message" data-rule-required="true"></textarea>
+                <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
               </div>
               <div class="form-group">
                 <input type="submit" value="Send" class="btn btn-md btn-success w-100">
