--- a/single.html
+++ b/single.html
@@ -168,11 +168,11 @@
               <h3>Subscribe to our newsletter</h3>
               <form action="#" method="POST">
                 <div class="form-group">
-                  <input type="email" name="email" id="email" class="form-control" placeholder="Email address">
+                  <input type="email" name="email" id="email" class="form-control form-control-sm" placeholder="Email address">
                 </div>
 
                 <div class="form-group">
-                  <input type="submit" value="Subscribe" class="btn btn-md btn-success w-100">
+                  <input type="submit" value="Subscribe" class="btn btn-sm btn-success w-100">
                 </div>
               </form>
             </div>
