--- a/category.html
+++ b/category.html
@@ -33,7 +33,7 @@
                 Categories
               </a>
               <ul class="dropdown-menu categories">
-                <li><a class="dropdown-item" href="#">Sports</a></li>
+                <li><a class="dropdown-item" href="category.html">Sports</a></li>
                 <li><a class="dropdown-item" href="#">Life style</a></li>
               </ul>
             </li>
@@ -69,7 +69,7 @@
 
       <div class="row">
         <div class="col">
-          <h1 class="mb-0 category-name">Travel</h1>
+          <h1 class="mb-0 category-name">Sports</h1>
         </div>
       </div>
 
