--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 Categories
               </a>
               <ul class="dropdown-menu categories">
-                <li><a class="dropdown-item" href="#">Sports</a></li>
+                <li><a class="dropdown-item" href="category.html">Sports</a></li>
                 <li><a class="dropdown-item" href="#">Life style</a></li>
               </ul>
             </li>
