--- a/single.html
+++ b/single.html
@@ -33,7 +33,7 @@
                 Categories
               </a>
               <ul class="dropdown-menu categories">
-                <li><a class="dropdown-item" href="#">Sports</a></li>
+                <li><a class="dropdown-item" href="category.html">Sports</a></li>
                 <li><a class="dropdown-item" href="#">Life style</a></li>
               </ul>
             </li>
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-7 col-lg-8 col-xl-9">
           <main class="content" id="article-content">
-            <h2 class="article-title display-4 text-center text-md-start">Who loves a butterfly?</h2>
+            <h2 class="article-title text-center text-md-start">Who loves a butterfly?</h2>
             <div class="row article-meta">
               <div class="left-half col-sm-12 col-sm-7 col-lg-8">
                 <span class="author">
