--- a/category.html
+++ b/category.html
@@ -78,14 +78,14 @@
           <div class="article">
             <div class="thumbnail">
               <a href="single.html">
-              <img src="assets/images/code.jpg" alt="Learn to code with us, for a better future test">
+              <img src="assets/images/butterfly2.jpg" alt="Who loves a butterfly">
               </a>
             </div>
             <div class="text">
               <h2 class="card-title">
-                <a href="single.html">Learn to code with us, for a better future</a>
+                <a href="single.html">Who loves a butterfly?</a>
               </h2>
-              <p class="text-muted">Learn to code with us. We have the best teachers in the country.</p>
+              <p class="text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
             <div class="read-more">
               <a class="btn btn-sm btn-success w-100" href="single.html">Read more</a>
