Add link to category page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="text">
               <p class="article-category">
-                <a href="#">Sports</a>
+                <a href="category.html">Sports</a>
               </p>
               <h2 class="card-title">
                 <a href="single.html">Who loves a butterfly?</a>
