--- a/single.html
+++ b/single.html
@@ -282,7 +282,7 @@
                       <span class="badge">4</span>
                     </a>
                     <a href="#" class="list-group-item list-group-item-action">
-                      <span>Sport</span>
+                      <span>Sports</span>
                       <span class="badge">0</span>
                     </a>
                   </div>
