--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="mainNavigation">
           <ul class="navbar-nav pe-md-1 navbar-expand-md">
             <li class="nav-item">
-              <a class="nav-link" href="#">Pages</a>
+              <a class="nav-link" href="page.html">Pages</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
