--- a/single.html
+++ b/single.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="assets/images/favicon.ico">
+  <link rel="stylesheet" href="assets/lib/cookieconsent/css/cookies.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/lib/cookieconsent/js/cookieconsent.min.js"></script>
 </head>
 <body>
 
@@ -305,5 +307,33 @@
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/print.min.js"></script>
 <script src="assets/js/share.js"></script>
+<script>
+  window.cookieconsent.initialise({
+  container: document.getElementById("cookieconsent"),
+  palette:{
+  popup: {background: "#323232"},
+  button: {background: "#008057"},
+  },
+  revokable: true,
+  onStatusChange: function(status) {
+  console.log(this.hasConsented() ?
+    'enable cookies' : 'disable cookies');
+  },
+  "position": "bottom-left",
+  "theme": "classic",
+  "secure": true,
+  "content": {
+    "header": 'Cookies used on the website!',
+    "message": 'This website uses cookies to improve your experience.',
+    "dismiss": 'Accept cookies!',
+    "allow": 'Allow cookies',
+    "deny": 'Decline',
+    "link": 'Learn more',
+    "close": '&#x274c;',
+    "policy": 'Cookie Policy',
+    "target": '_blank',
+    }
+});
+</script>
 </body>
 </html>
