Display articles by author

--- a/author.html
+++ b/author.html
@@ -68,7 +68,12 @@
 
     <div class="container">
 
-      <h1 class="mb-0 category-name">Sports</h1>
+      <div class="author">
+        <h1 class="author-name">John Doe</h1>
+        <img src="assets/images/john.jpg" alt="John Doe" class="rounded-circle ">
+      </div>
+
+      <p class="bio">John Doe lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos explicabo nostrum iste, molestiae laboriosam omnis fuga. Tenetur, unde voluptatem. Odio delectus eveniet molestiae corporis facere minima placeat iste vitae autem.</p>
 
       <div class="row articles-grid">
         <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
@@ -79,6 +84,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="category.html">Sports</a>
+              </p>
               <h2 class="card-title">
                 <a href="single.html">Who loves a butterfly?</a>
               </h2>
@@ -97,6 +105,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Europe's most beautiful castles</a>
               </h2>
@@ -115,6 +126,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Learn to code with us, for a better future</a>
               </h2>
@@ -133,6 +147,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Europe's most beautiful castles</a>
               </h2>
@@ -151,6 +168,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Learn to code with us, for a better future</a>
               </h2>
@@ -169,6 +189,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Europe's most beautiful castles</a>
               </h2>
@@ -187,6 +210,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Learn to code with us, for a better future</a>
               </h2>
@@ -205,6 +231,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Europe's most beautiful castles</a>
               </h2>
@@ -223,6 +252,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Learn to code with us, for a better future</a>
               </h2>
@@ -241,6 +273,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Europe's most beautiful castles</a>
               </h2>
@@ -259,6 +294,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Uncategorised</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Learn to code with us, for a better future</a>
               </h2>
@@ -277,6 +315,9 @@
               </a>
             </div>
             <div class="text">
+              <p class="article-category">
+                <a href="#">Travel</a>
+              </p>
               <h2 class="card-title">
                 <a href="#">Europe's most beautiful castles</a>
               </h2>
