Link to articles by author. Fix bug.

--- a/single.html
+++ b/single.html
@@ -74,8 +74,8 @@
             <div class="row article-meta">
               <div class="left-half col-sm-12 col-sm-7 col-lg-8">
                 <span class="author">
-                <a href="#">
-                  <img src="assets/images/john.jpg" alt="John Doe" class="rounded-circle ">
+                <a href="author.html">
+                  <img src="assets/images/john.jpg" alt="John Doe" class="rounded-circle">
                   <span class="pl-1">by John Doe</span>
                 </a>
                 </span> 
