Change the bio formatting and photo size

--- a/author.html
+++ b/author.html
@@ -73,7 +73,7 @@
         <img src="assets/images/john.jpg" alt="John Doe" class="rounded-circle ">
       </div>
 
-      <p class="bio">John Doe lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos explicabo nostrum iste, molestiae laboriosam omnis fuga. Tenetur, unde voluptatem. Odio delectus eveniet molestiae corporis facere minima placeat iste vitae autem.</p>
+      <p class="bio">John Doe lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla officia, eaque animi voluptatum similique veniam deleniti blanditiis omnis delectus saepe recusandae, numquam laboriosam asperiores reiciendis voluptas laudantium rerum fugit fuga, amet quia cupiditate. Voluptatibus nostrum consequatur rerum sed laboriosam voluptatem.</p>
 
       <div class="row articles-grid">
         <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3">
