--- a/single.html
+++ b/single.html
@@ -99,19 +99,19 @@
             <div class="social-container"> 
               <ul class="d-flex list-unstyled social-buttons justify-content-center justify-content-md-start">
                 <li class="me-1">
-                  <button id="share-button-fb" class="btn btn-sm facebook" title="Share this article on Facebook">
+                  <button class="share-button facebook btn btn-sm" title="Share this article on Facebook">
                     <i class="fab fa-facebook"></i>
                     Facebook
                   </button>
                 </li>
                 <li class="me-1">
-                  <button id="share-button-tw" class="btn btn-sm twitter" title="Share this article on Twitter">
+                  <button class="share-button twitter btn btn-sm" title="Share this article on Twitter">
                     <i class="fab fa-twitter"></i> 
                     Twitter
                   </button>
                 </li>
                 <li>
-                  <button id="share-button-ln" class="btn btn-sm linkedin" title="Share this article on Linkedin">
+                  <button class="share-button linkedin btn btn-sm" title="Share this article on Linkedin">
                     <i class="fab fa-linkedin"></i>
                     Linkedin
                   </button>
