Add avatar to comment

--- a/single.html
+++ b/single.html
@@ -121,10 +121,12 @@
 
             <div class="comments mt-4" id="comments_container">
               <div class="card bg-light mb-3 comment">
-                <h5 class="card-header p-2">
+                <h5 class="card-header">
                   <span class="row">
-                  <span class="col-sm-6 text-dark">John Doe says:</span>
-                  <span class="col-sm-6 text-dark d-none d-sm-block text-end">Nov 28, 2022 at 23:32:15</span>
+                  <span class="col-sm-6 text-dark avatar">
+                    <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
+                  </span>
+                  <span class="col-sm-6 text-dark d-none d-sm-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
                   </span>
                 </h5>
                 <div class="card-body bg-white p-2">
@@ -132,14 +134,16 @@
                 </div>
               </div>
               <div class="card bg-light mb-3 comment">
-                <h5 class="card-header p-2">
+                <h5 class="card-header">
                   <span class="row">
-                  <span class="col-sm-6 text-dark">Jane Smith says:</span>
-                  <span class="col-sm-6 text-dark d-none d-sm-block text-end">Nov 29, 2022 at 00:55:37</span>
+                  <span class="col-sm-6 text-dark avatar">
+                    <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
+                  </span>
+                  <span class="col-sm-6 text-dark d-none d-sm-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
                   </span>
                 </h5>
                 <div class="card-body bg-white p-2">
-                  <p>Post comment validation in AngularJS.</p>
+                  <p>Mountains, she had a last view back</p>
                 </div>
               </div>
             </div>
