Fix comments bug

--- a/single.html
+++ b/single.html
@@ -126,7 +126,7 @@
                   <span class="col-sm-6 text-dark avatar">
                     <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
                   </span>
-                  <span class="col-sm-6 text-dark d-none d-sm-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
+                  <span class="col-sm-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
                   </span>
                 </h5>
                 <div class="card-body bg-white p-2">
@@ -139,7 +139,7 @@
                   <span class="col-sm-6 text-dark avatar">
                     <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
                   </span>
-                  <span class="col-sm-6 text-dark d-none d-sm-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
+                  <span class="col-sm-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
                   </span>
                 </h5>
                 <div class="card-body bg-white p-2">
