Fix comment user and date display bug

--- a/single.html
+++ b/single.html
@@ -123,10 +123,10 @@
               <div class="card bg-light mb-3 comment">
                 <h5 class="card-header">
                   <span class="row">
-                  <span class="col-sm-6 text-dark avatar">
+                  <span class="col-md-6 text-dark avatar">
                     <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
                   </span>
-                  <span class="col-sm-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
+                  <span class="col-md-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
                   </span>
                 </h5>
                 <div class="card-body bg-white p-2">
@@ -136,10 +136,10 @@
               <div class="card bg-light mb-3 comment">
                 <h5 class="card-header">
                   <span class="row">
-                  <span class="col-sm-6 text-dark avatar">
+                  <span class="col-md-6 text-dark avatar">
                     <img src="assets/images/kayden.jpg" alt="Kayden" class="rounded-circle">Kayden Doe says:
                   </span>
-                  <span class="col-sm-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
+                  <span class="col-md-6 text-dark d-none d-md-flex align-items-center justify-content-end">Nov 28, 2022 at 23:32:15</span>
                   </span>
                 </h5>
                 <div class="card-body bg-white p-2">
