Add a margin to the bottom of the sidebar

--- a/single.html
+++ b/single.html
@@ -167,7 +167,7 @@
           </main>
         </div>
         <div class="col-xs-12 col-sm-5 col-lg-4 col-xl-3">
-          <aside class="sidebar">
+          <aside class="sidebar mb-3">
             
             <div class="newsletter">
               <h3>Subscribe to our newsletter</h3>
